Correcciones con sornarLint para el codigo limpio